Atualizei estilos dos texto e blocos

--- a/desafios/desafiositecordel/index.html
+++ b/desafios/desafiositecordel/index.html
@@ -17,7 +17,7 @@
         
     </header>
 
-    <section>
+    <section class="normal">
         <p>
             Estou ficando cansado
             <br>
@@ -35,7 +35,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="imagem">
         <p>
             Não é mais como era antes
             <br>
@@ -53,7 +53,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="normal">
         <p>
             Arroba agora não pesa
             <br>
@@ -87,7 +87,7 @@
         
     </section>
 
-    <section>
+    <section class="imagem">
         <p>
             Tenho saudade das cartas
             <br>
@@ -105,7 +105,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="normal">
         <p>
             Agora, escrevo e envio
             <br>
