--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -5,31 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabelas</title>
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
         body {
+            min-width: 100vh;
             font-family: Arial, Helvetica, sans-serif;
         }
 
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
-        }
-
-        tr.linha {
-            background-color: gray;
         }
 
         td {
             border: 1px solid black;
             padding: 8px;
-        }
-
-        td.dado {
-            background-color: rgb(20, 20, 80);
-            color: white;
+            text-align: right;
+            vertical-align: middle;
         }
 
         .tabela2 {
             width: 800px;
+            height: 300px;
             margin: auto;
         }
     </style>
@@ -43,7 +44,7 @@
             <td>B2</td>
             <td>C3</td>
         </tr>
-        <tr class="linha">
+        <tr>
             <td>A2</td>
             <td>B2</td>
             <td>C2</td>
@@ -55,18 +56,10 @@
         </tr>
         <tr>
             <td>A4</td>
-            <td class="dado">B4</td>
+            <td>B4</td>
             <td>C4</td>
         </tr>
-        <tr>
-            <td>A5</td>
-            <td>B5</td>
-        </tr>
-        <tr>
-            <td>A6</td>
-        </tr>
     </table>
-    <br>
     <table class="tabela2">
         <tr>
             <td>Corinthians</td>
