Novos exercícios de iframes

--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -30,7 +30,7 @@
 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem, cum dicta similique, culpa incidunt provident iure facilis, voluptatibus sint illum tempore laboriosam quaerat? Officia hic magni adipisci, natus odit facere! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut voluptatum, tempora esse qui pariatur eius laborum quos adipisci, est, illum cum! Aut obcaecati esse asperiores provident accusamus id impedit. Quis.</p>
 
-    <iframe id="tela" name="frame" name="frame2" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1>Clique em um dos quatros links emcima para ver as páginas!</h1><img src='imagens/thumb-js.png'>">
         <p>Infelizmente seu navegador não é compatível com isso!</p>
     </iframe>
 
