Novo exercício de formulário.

--- a/exercicios/ex025/formulario002.html
+++ b/exercicios/ex025/formulario002.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    <h1>Segundo teste exercício de formulário</h1>
+    <h1>Segundo teste exercício de formulário.</h1>
 
     <form action="cadastro.php" autocomplete="on" method="post">
         <p>
