--- a/desafios/desafioFormulario/formulario18Netflix/formulario.html
+++ b/desafios/desafioFormulario/formulario18Netflix/formulario.html
@@ -11,17 +11,17 @@
         <div id="container">
             <h1>Sign in</h1>
             <section>
-                <input type="email" name="mail" id="email" size="40" required placeholder="Email or phone number">
+                <input type="email" name="mail" id="email" required placeholder="Email or phone number">
             </section>
             <section>
-                <input type="password" name="sen" id="senha" size="40" required placeholder="Password">
+                <input type="password" name="sen" id="senha" required placeholder="Password">
             </section>
             <div class="botao">
                 <input type="submit" value="Sign in">
             </div>
-            <section class="checkbox">
+            <div class="checkbox">
                 <input type="checkbox" name="che" id="chec"> <p>Remember me</p>
-            </section>
+            </div>
             <div class="facebook">
                 <a href="#"><img src="social_facebook_box_blue.png" alt="">Login with Facebook</a>
             </div>
