--- a/desafios/desafioFormulario/formulario/formulario.html
+++ b/desafios/desafioFormulario/formulario/formulario.html
@@ -14,25 +14,27 @@
         body {
             width: 100%;
             height: 100%;
-            background-image: linear-gradient(to right, darkblue, rgb(2, 2, 32));
+            background-color: rgb(0, 0, 26);
         }
 
-        .fora {
-            width: 400px;
-            height: 500px;
+        form {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        #dentro {
+            padding: 20px 40px;
             background-color: white;
             box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.575);
-            position: relative;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, 15%);
             border-radius: 10px;
         }
 
         h1 {
-            font-size: 22px;
+            font-size: 26px;
             padding-top: 20px;
-            font-weight: bold;
+            font-weight: 900;
             text-transform: uppercase;
         }
 
@@ -45,45 +47,76 @@
             text-align: center;
             padding-top: 10px;
         }
-    
-        form {
-            text-align: center;
-        }
 
-        input {
+        #dentro section input {
             padding: 10px 20px 10px 20px;
             margin-top: 50px;
             border: none;
             border-bottom: 2px solid black;
         }
 
-        .pro {
+        .botao {
+            text-align: center;
+            margin-bottom: 10px;
+            margin-top: 40px;
+        }
+
+        .botao input {
             background-color: rgb(4, 4, 51);
             color: white;
-            padding: 10px 40px 10px 40px;
             border-radius: 10px;
+            padding: 10px 50px;
         }
 
         input:focus {
             outline: none;
         }
+
+        @media screen and (min-width: 320px) and (max-width: 600px) {
+            form {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 100vh;
+            }
+
+            #dentro {
+                padding: 10px 25px;
+            }
+
+            #dentro section input {
+                width: 85%;
+                margin-top: 45px;
+            }
+
+            .botao {
+                margin-top: 40px;
+                margin-bottom: 20px;
+            }
+        }
     </style>
 </head>
 <body>
-    <div class="fora">
-        <form action="cadastro.php" autocomplete="off">
-            <div class="dentro">
-                <h1>Crie sua conta</h1>
-                <p>Este é o primeiro passo</p>
+    <form action="cadastro.php" autocomplete="off">
+        <div id="dentro">
+            <h1>Crie sua conta</h1>
+            <p>Este é o primeiro passo</p>
+            <section>
                 <input type="email" name="email" id="emaill" placeholder="Email" size="35" required minlength="12">
+            </section>
 
+            <section>
                 <input type="password" name="sen" id="senha" size="35" placeholder="Senha" required minlength="8" maxlength="16">
+            </section>
 
+            <section>
                 <input type="password" name="sen2" id="senha2" size="35" placeholder="Confirme a senha" required minlength="8" maxlength="16">
+            </section>
 
-                <input class="pro" type="submit" value="Próximo">
+            <div class="botao">
+                <input type="submit" value="Próximo">
             </div>
-        </form>
-    </div>
+        </div>
+    </form>
 </body>
 </html>
