--- a/desafios/desafioFormulario/formulario3/formulario.html
+++ b/desafios/desafioFormulario/formulario3/formulario.html
@@ -70,6 +70,12 @@
             font-weight: bolder;
             box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.521);
         }
+
+        @media screen and (min-width: 320px) and (max-width: 600px) {
+            .box {
+                padding: 70px 8px 70px 8px;
+            }
+        }
     </style>
 </head>
 <body>
