--- a/desafios/desafioFormulario/formulario2/formulario.html
+++ b/desafios/desafioFormulario/formulario2/formulario.html
@@ -92,6 +92,15 @@
             text-align: center;
             border-radius: 10px;
         }
+
+        @media screen and (min-width: 320px) and (max-width: 600px) {
+            div {
+            }
+            
+            .inputnome {
+                width: 80%;
+            }
+        }
     </style>
 </head>
 <body>
