Arrumando os formulários.

--- a/desafios/desafioFormulario/formulario2/formulario.html
+++ b/desafios/desafioFormulario/formulario2/formulario.html
@@ -95,6 +95,7 @@
 
         @media screen and (min-width: 320px) and (max-width: 600px) {
             div {
+                padding: 10px;
             }
             
             .inputnome {
