--- a/desafios/desafioFormulario/formulario21/formulario.html
+++ b/desafios/desafioFormulario/formulario21/formulario.html
@@ -10,7 +10,7 @@
     <main>
         <section id="login">
             <div id="imagem">
-
+                <!--Aqui é aonde foi a foto ao lado do formulário-->
             </div>
             <div id="formulario">
                 <h1>Login</h1>
