Na metade do formulário 22.

--- a/desafios/desafioFormulario/formulario22/formulario.html
+++ b/desafios/desafioFormulario/formulario22/formulario.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <main>
@@ -16,26 +17,24 @@
                 
                 <form action="#" method="post" autocomplete="on">
                     <section class="lo-in">
-                        <label for="email">E-mail</label> <br>
                         <input type="email" name="mail" id="email" required placeholder="@email.com" autocomplete="email" minlength="10">
                     </section>
                     <section class="lo-in">
-                        <label for="password">Password</label> <br>
                         <input type="password" name="pass" id="password" required placeholder="Password" minlength="8" autocomplete="current-password">
                     </section>
                     <section class="checkbox">
-                        <input type="checkbox" name="check" id="checkbox"> Remember me <a href="#">Forgot the password?</a>
+                        <input type="checkbox" name="check" id="checkbox"> <p class="reme">Remember me</p> <a href="#">Forgot the password?</a>
                     </section>
                     <section class="botao">
                         <input type="submit" value="Login">
                     </section>
-                    <p class="sign">Don't you have an account?<a href=""></a>Sign up</p>
+                    <p class="sign">Don't you have an account?<a href="">Sign up</a></p>
 
                     <section class="footer">
-                        <h2>Login</h2>
-                        <a href="#"><img src="" alt=""></a>
-                        <a href="#"><img src="" alt=""></a>
-                        <a href="#"><img src="" alt=""></a>
+                        <h2>Log in with</h2>
+                        <a href="#"><img src="imagem/facebook-icon.svg" alt=""></a>
+                        <a href="#"><img src="imagem/google.webp" alt=""></a>
+                        <a href="#"><img src="imagem/apple-v1652263991660.png" alt=""></a>
                     </section>
                 </form>
 
