--- a/exercicios/exFlexbox/flexbox2.html
+++ b/exercicios/exFlexbox/flexbox2.html
@@ -50,5 +50,19 @@
             <li><a href="#">Contato</a></li>
         </ul>
     </nav>
+
+    <div class="container">
+        <div class="content-1">
+            <div class="item item-1">1</div>
+            <div class="item item-2">2</div>
+        </div>
+        <div class="content-2">
+            <div class="item item-meio">meio</div>
+        </div>
+        <div class="content-3">
+            <div class="item item-3">3</div>
+            <div class="item item-4">4</div>
+        </div>
+    </div>
 </body>
 </html>
