Galeria de fotos com Grid!

--- a/desafios/desafioGaleriaGrid/grid.html
+++ b/desafios/desafioGaleriaGrid/grid.html
@@ -13,20 +13,29 @@
 
             <ul>
                 <li><a href="#">sobre</a></li>
-                <li><a href="#">contato</a></li>
-                <li><a href="#">download</a></li>
+                <li><a href="#">politica de privacidade</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <div class="grid-container">
-            <img src="imagens/pexels-gin-311039220-25412898.jpg" alt="">
-            <img src="imagens/pexels-hossam-adel-364774369-14411622.jpg" alt="">
-            <img src="imagens/pexels-jepoyous-19815831.jpg" alt="">
-            <img src="imagens/pexels-laura-paredis-1047081-26424655.jpg" alt="">
-            <img src="imagens/pexels-njeromin-19161511.jpg" alt="">
-            <img src="imagens/pexels-octavio-scholz-3164742-22697882.jpg" alt="">
+            <div class="grid-content-1">
+                <img class="item-img img-1" src="imagens/pexels-introspectivedsgn-9827684.jpg" alt="">
+                <img class="item-img img-2" src="imagens/pexels-solyartphotos-14825208.jpg" alt="">
+                <img class="item-img img-3" src="imagens/pexels-pixabay-209841.jpg" alt="">
+                <div class="overlay"></div>
+            </div>
+            <div class="grid-content-2">
+                <img class="item-img img-4" src="imagens/pexels-jepoyous-19815831.jpg" alt="">
+                <img class="item-img" src="imagens/pexels-quentin-chansaulme-423965555-23549224.jpg" alt="">
+                <img class="item-img" src="imagens/pexels-vikramstudio46-1119796.jpg" alt="">
+            </div>
+            <div class="grid-content-3">
+                <img class="item-img" src="imagens/pexels-njeromin-19161511.jpg" alt="">
+                <img class="item-img" src="imagens/pexels-octavio-scholz-3164742-22697882.jpg" alt="">
+                <img class="item-img" src="imagens/pexels-hngstrm-20250870.jpg" alt="">
+            </div>
         </div>
     </main>
 </body>
