--- a/desafios/desafioGaleriaGrid/grid.html
+++ b/desafios/desafioGaleriaGrid/grid.html
@@ -10,30 +10,25 @@
     <header>
         <nav>
             <h1>Galeria de fotos</h1>
-
-            <ul>
-                <li><a href="#">sobre</a></li>
-                <li><a href="#">politica de privacidade</a></li>
-            </ul>
         </nav>
     </header>
 
     <main>
         <div class="grid-container">
             <div class="grid-content-1">
-                <img class="item-img img-1" src="imagens/pexels-introspectivedsgn-9827684.jpg" alt="">
-                <img class="item-img img-2" src="imagens/pexels-solyartphotos-14825208.jpg" alt="">
-                <img class="item-img img-3" src="imagens/pexels-pixabay-209841.jpg" alt="">
+                <img class="item-im" src="imagens/pexels-introspectivedsgn-9827684.jpg" alt="">
+                <img class="item-img" src="imagens/pexels-solyartphotos-14825208.jpg" alt="">
+                <img class="item-img" src="imagens/pexels-octavio-scholz-3164742-22697882.jpg" alt="">
                 <div class="overlay"></div>
             </div>
             <div class="grid-content-2">
-                <img class="item-img img-4" src="imagens/pexels-jepoyous-19815831.jpg" alt="">
+                <img class="item-img" src="imagens/pexels-jepoyous-19815831.jpg" alt="">
                 <img class="item-img" src="imagens/pexels-quentin-chansaulme-423965555-23549224.jpg" alt="">
-                <img class="item-img" src="imagens/pexels-vikramstudio46-1119796.jpg" alt="">
+                <img class="item-img" src="imagens/pexels-octavio-scholz-3164742-22697882.jpg" alt="">
             </div>
             <div class="grid-content-3">
-                <img class="item-img" src="imagens/pexels-njeromin-19161511.jpg" alt="">
-                <img class="item-img" src="imagens/pexels-octavio-scholz-3164742-22697882.jpg" alt="">
+                <img class="item-img" src="imagens/pexels-pixabay-209841.jpg" alt="">
+                <img class="item-img" src="imagens/pexels-vikramstudio46-1119796.jpg" alt="">
                 <img class="item-img" src="imagens/pexels-hngstrm-20250870.jpg" alt="">
             </div>
         </div>
