Novo exercício de keyframes.

--- a/desafios/desafioGaleriaGrid/grid.html
+++ b/desafios/desafioGaleriaGrid/grid.html
@@ -16,7 +16,7 @@
     <main>
         <div class="grid-container">
             <div class="grid-content-1">
-                <img class="item-im" src="imagens/pexels-introspectivedsgn-9827684.jpg" alt="">
+                <img class="item-img" src="imagens/pexels-introspectivedsgn-9827684.jpg" alt="">
                 <img class="item-img" src="imagens/pexels-solyartphotos-14825208.jpg" alt="">
                 <img class="item-img" src="imagens/pexels-octavio-scholz-3164742-22697882.jpg" alt="">
                 <div class="overlay"></div>
