Página de biográfia concluída!

--- a/UdemyHtmlCss/projeto-annabella/home.html
+++ b/UdemyHtmlCss/projeto-annabella/home.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Página inical da modela Anna Bella">
     <title>HOME - Anna Bella</title>
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
     <header><!--Inicio do cabeçalho-->
         <div>
-            <img id="img-capa" src="capa.png" alt="">
+            <img id="img-capa" src="imagem/capa.png" alt="foto da capa">
         </div>
         <nav>
             <ul id="ul-menu">
                 <li><a href="home.html">home </a></li>
-                <li><a href="#">biografia </a></li>
+                <li><a href="biografia.html">biografia </a></li>
                 <li><a href="#">campanhas publicitárias </a></li>
                 <li><a href="#">contato</a></li>
             </ul>
@@ -39,12 +40,12 @@
         </section>
     </main><!--Fim do conteúdo principal-->
 
-    <footer>
+    <footer><!--Inicio do rodapé-->
         <h1>Todos os direitos reservados</h1>
 
         <p>
             Criado por <a target="_blank" href="https://github.com/Davicouto530">Davi do couto</a> junto a <a target="_blank" href="https://www.udemy.com">Udemy</a>
         </p>
-    </footer>
+    </footer><!--Fim do rodapé-->
 </body>
 </html>
