--- a/UdemyHtmlCss/projeto-annabella/biografia.html
+++ b/UdemyHtmlCss/projeto-annabella/biografia.html
@@ -16,7 +16,7 @@
             <ul id="ul-menu">
                 <li><a href="home.html">home</a></li>
                 <li><a href="biografia.html">biografia</a></li>
-                <li><a href="#">campanhas publicitárias</a></li>
+                <li><a href="campanha.html">campanhas publicitárias</a></li>
                 <li><a href="#">contato</a></li>
             </ul>
         </nav>
@@ -44,12 +44,12 @@
         </section>
     </main><!--Fim do conteúdo principal-->
 
-    <footer>
+    <footer><!--Inicio do rodapé-->
         <h1>Todos os direitos reservados</h1>
 
         <p>
             Criado por <a target="_blank" href="https://github.com/Davicouto530">Davi do couto</a> junto a <a target="_blank" href="https://www.udemy.com">Udemy</a>
         </p>
-    </footer>
+    </footer><!--Fim do rodapé-->
 </body>
 </html>
