--- a/UdemyHtmlCss/projeto-annabella/biografia.html
+++ b/UdemyHtmlCss/projeto-annabella/biografia.html
@@ -17,7 +17,7 @@
                 <li><a href="home.html">home</a></li>
                 <li><a href="biografia.html">biografia</a></li>
                 <li><a href="campanha.html">campanhas publicitárias</a></li>
-                <li><a href="#">contato</a></li>
+                <li><a href="contato.html">contato</a></li>
             </ul>
         </nav>
     </header><!--Fim do cabeçalho-->
