fazendo a parte do conteúdo principal do site.

--- a/UdemyHtmlCss/projeto-noticias/home.html
+++ b/UdemyHtmlCss/projeto-noticias/home.html
@@ -6,24 +6,84 @@
     <title>Jornal notícias</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="home">
     <header>
         <div id="container">
             <div id="topo">
                 <div class="logo"></div>
+                <nav>
+                    <ul id="navegacao">
+                        <li class="primeiro">
+                            <a id="home" href="#">Home</a>
+                        </li>
+                        <li>
+                            <a id="brasil" href="#">Brasil</a>
+                        </li>
+                        <li>
+                            <a id="internacional" href="#">Internacional</a>
+                        </li>
+                        <li>
+                            <a id="economia" href="#">Econômia</a>
+                        </li>
+                        <li>
+                            <a id="saude" href="#">Saúde</a>
+                        </li>
+                        <li>
+                            <a id="ciencia" href="#">Ciência</a>
+                        </li>
+                        <li>
+                            <a id="fotos" href="#">Fotos</a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
-            <nav id="nav-menu">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Brasil</a></li>
-                    <li><a href="#">Internacional</a></li>
-                    <li><a href="#">Econômia</a></li>
-                    <li><a href="#">Saúde</a></li>
-                    <li><a href="#">Ciência</a></li>
-                    <li><a href="#">Fotos</a></li>
-                </ul>
-            </nav>
         </div>
     </header>
+
+    <main>
+        <div id="container">
+            <div id="entrevista">
+                <h2>Entrevista</h2>
+
+                <section id="nomes">
+                    <p>José Almeida</p>
+
+                    <p>Felipe Silva</p>
+
+                    <p>Renato Rodrigues</p>
+
+                    <p>Abelardo Silveira</p>
+
+                    <p>André Carlos</p>
+
+                    <p>Marco Mello</p>
+
+                    <p>João Pedro</p>
+
+                    <p>Fernando Welss</p>
+                </section>
+            </div>
+
+            <div id="ultima-entrevista">
+                <h2>Última entrevista</h2>
+
+                <h3>entrevista com felipe silva</h3>
+                <img src="imagens/doutor.jpg" alt="Foto do doutor">
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <a href="#">Ler mais!</a>
+            </div>
+
+            <div id="destaque">
+                <h2>Destaque</h2>
+
+                <h3>Nova legislação</h3>
+                <img src="imagens/taxi.jpg" alt="foto de um táxi">
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <a href="#">Ler mais!</a>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
