Fazendo a parte de baixo do conteúdo.

--- a/UdemyHtmlCss/projeto-noticias/home.html
+++ b/UdemyHtmlCss/projeto-noticias/home.html
@@ -8,8 +8,9 @@
 </head>
 <body class="home">
     <header>
-        <div id="container">
+        <div id="container1">
             <div id="topo">
+                <div id="img-mundo"></div>
                 <div class="logo"></div>
                 <nav>
                     <ul id="navegacao">
@@ -41,7 +42,7 @@
     </header>
 
     <main>
-        <div id="container">
+        <div id="container2">
             <div id="entrevista">
                 <h2>Entrevista</h2>
 
@@ -62,16 +63,58 @@
 
                     <p>Fernando Welss</p>
                 </section>
+
+                <section id="cadastro">
+                    <h2>News</h2>
+                    <label for="email">Email:</label>
+                    <input type="email" name="email" id="email" placeholder="E-mail">
+
+                    <input type="submit" value="Cadastrar">
+                </section>
             </div>
 
             <div id="ultima-entrevista">
-                <h2>Última entrevista</h2>
+                <div id="medico">
+                    <h2>Última entrevista</h2>
+                    <h3>entrevista com felipe silva</h3>
+                    <img src="imagens/doutor.jpg" alt="Foto do doutor">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <a href="#">Ler mais!</a>
+                </div>
+                <div id="fotos-mundo">
+                    <h2>Mundo</h2>
+                    <section class="foto-mundo-1">
+                        <img src="imagens/mundo.jpg" alt="foto de uma cidade">
 
-                <h3>entrevista com felipe silva</h3>
-                <img src="imagens/doutor.jpg" alt="Foto do doutor">
+                        <h4 class="p-azul">Crise européia</h4>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                <a href="#">Ler mais!</a>
+                        <p>lorem impusim mais que nodhby ais lorem ayo elit.</p>
+                    </section>
+                    <hr>
+                    <section class="foto-mundo-2">
+                        <img src="imagens/mundo.jpg" alt="foto de uma cidade">
+
+                        <h4 class="p-azul">Usa tentando novo acordo</h4>
+
+                        <p>lorem impusim mais que nodhby ais lorem ayo elit.</p>
+                    </section>
+                    <hr>
+                    <section class="foto-mundo-3">
+                        <img src="imagens/mundo.jpg" alt="foto de uma cidade">
+
+                        <h4 class="p-azul">guerra na síria</h4>
+
+                        <p>lorem impusim mais que nodhby ais lorem ayo elit.</p>
+                    </section>
+                    <hr>
+                    <section class="foto-mundo-4">
+                        <img src="imagens/mundo.jpg" alt="foto de uma cidade">
+
+                        <h4 class="p-azul">rússia aprova lei</h4>
+
+                        <p>lorem impusim mais que nodhby ais lorem ayo elit.</p>
+                    </section>
+                </div>
             </div>
 
             <div id="destaque">
