Projeto notícias cidade pelo Udemy finalizado.

--- a/UdemyHtmlCss/projeto-noticias/fotos.html
+++ b/UdemyHtmlCss/projeto-noticias/fotos.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jornal notícias</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Brasil notícias</title>
+    <link rel="stylesheet" href="fotos.css">
 </head>
-<body class="home">
+
+<body class="fotos">
     <header>
         <div id="container1">
             <div id="topo">
@@ -43,77 +45,6 @@
 
     <main><!--Inicio do conteúdo principal-->
         <div id="container2"><!--Inicio do container-->
-            <div id="entrevista">
-                <h2>Entrevista</h2>
-
-                <section id="nomes">
-                    <ul>
-                        <li><a href="#">José Almeida</a></li>
-                        <li><a href="#">Felipe Silva</a></li>
-                        <li><a href="#">Renato Rodrigues</a></li>
-                        <li><a href="#">Abelardo Silveira</a></li>
-                        <li><a href="#">André Carlos</a></li>
-                        <li><a href="#">Marco Mello</a></li>
-                        <li><a href="#">João Pedro</a></li>
-                        <li><a href="#">Fernando Welss</a></li>
-                    </ul>
-                </section>
-
-                <section id="cadastro">
-                    <h2>News</h2>
-                    <label for="email">Email:</label>
-                    <input type="email" name="email" id="email" placeholder="E-mail">
-
-                    <input type="submit" value="Cadastrar">
-                </section>
-            </div>
-
-            <div id="ultima-entrevista">
-                <div id="medico">
-                    <h2>Última entrevista</h2>
-                    <h3>entrevista com felipe silva</h3>
-                    <img src="imagens/doutor.jpg" alt="Foto do doutor">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    <a href="#">Ler mais!</a>
-                </div>
-                <div id="fotos-mundo">
-                    <h2>Mundo</h2>
-                    <section class="foto-mundo-1">
-                        <img src="imagens/mundo.jpg" alt="foto de uma cidade">
-
-                        <a href="">
-                            <h4>Crise européia</h4>
-                            <p>lorem impusim mais que nodhby ais.</p>
-                        </a>
-                    </section>
-
-                    <section class="foto-mundo-2">
-                        <img src="imagens/mundo.jpg" alt="foto de uma cidade">
-
-                        <a href="">
-                            <h4>Usa tentando novo acordo</h4>
-                            <p>lorem impusim mais que nodhby ais.</p>
-                        </a>
-                    </section>
-
-                    <section class="foto-mundo-3">
-                        <img src="imagens/mundo.jpg" alt="foto de uma cidade">
-
-                        <a href="">
-                            <h4>guerra na síria</h4>
-                            <p>lorem impusim mais que nodhby ais.</p>
-                        </a>
-                    </section>
-
-                    <section class="foto-mundo-4">
-                        <img src="imagens/mundo.jpg" alt="foto de uma cidade">
-                        <a href="">
-                            <h4>rússia aprova lei</h4>
-                            <p>lorem impusim mais que nodhby ais.</p>
-                        </a>
-                    </section>
-                </div>
-            </div>
 
             <div id="destaque">
                 <div id="taxi">
@@ -161,11 +92,12 @@
                     </section>
                 </div>
             </div>
-        </div><!--Fim do container-->
-    </main><!--Fim do conteúdo principal-->
+    </main>
 
     <footer><!--Inicio do rodapé-->
-        <h2>Notícias cidade - &copy; Davi do couto2024 junto a <a target="_blank" href="https://www.udemy.com/">Udemy</a></h2>
+        <h2>Notícias cidade - &copy; Davi do couto2024 junto a <a target="_blank"
+                href="https://www.udemy.com/">Udemy</a></h2>
     </footer><!--Fim do rodapé-->
 </body>
+
 </html>
