--- a/ProjetosUdemy/projeto-museu/home.html
+++ b/ProjetosUdemy/projeto-museu/home.html
@@ -30,6 +30,46 @@
                 <img src="img/museu.png" alt="foto do museu">
             </section>
 
+            <div id="primeira-parte">
+
+                <section id="video">
+                    <h1>Vídeo: conheça o museu</h1>
+                    <iframe width="330" height="190" src="https://www.youtube.com/embed/RGUYb-hivrc?si=vGPPyLMgWJKKLHlY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </section>
+
+                <section id="mapa">
+                    <h1>Mapa: encontre o museu</h1>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.206445750082!2d-43.229103825448576!3d-22.905755037832748!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997e58a085b7af%3A0x4d11e9a933d38ce3!2sMuseu%20Nacional%20-%20UFRJ!5e0!3m2!1spt-BR!2sbr!4v1734988877884!5m2!1spt-BR!2sbr" width="330" height="190" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </section>
+
+                
+            </div>
+
+            <div id="segunda-parte-textos">
+                <section id="lista-exposicoes">
+                    <h1>exposições</h1>
+
+                    <ul>
+                        <li><a href="#">Os assustadores insetos</a></li>
+                        <li><a href="#">O crânio da Luzia, a mulher mais antiga do Brasil</a></li>
+                        <li><a href="#">Preguiça gigante e tigres-dentes-de-dabre</a></li>
+                        <li><a href="#">Plantas do Brasil Central</a></li>
+                        <li><a href="#">Teresa Cristina: A imperatriz Arqueóoga</a></li>
+                        <li><a href="#">Artes com dinossauros - Paleoarte</a></li>
+                        <li><a href="#">Veja todos (65)</a></li>
+                    </ul>
+                </section>
+
+                <section id="historia">
+                    <h1>200 anos de história</h1>
+
+                    <p>
+                        Numa ponta que avança sobre o mar, posteriormente conhecida como Ponta do Calabouço, entre as prais de Piaçaba e Santa Luzia, no centro histórico do Rio de Janeiro, os portugueses construiram em 1603 a Fortaleza de Santiago, origem do conjunto arquitetônico que hoje abriga o Museu Histórico Nacional.
+                    </p>
+
+                    <a href="#">Leia mais</a>
+                </section>
+            </div>
 
         </div>
 
@@ -51,7 +91,33 @@
 
                 <input class="botao" type="submit" value="Verificar disponibilidade">
             </section>
+
+            <section id="galeria-fotos">
+                <h1>galeria de fotos</h1>
+
+                <img class="fundo" src="img/imagem1.jpg" alt="foto 1 do museu">
+            </section>
         </aside>
     </main>
+
+    <hr>
+
+    <footer>
+        <nav id="nav-footer">
+            <ul>
+                <li><a href="#">home</a></li>
+                <li><a href="#">exposição</a></li>
+                <li><a href="">pesquisa</a></li>
+                <li><a href="#">acervo</a></li>
+                <li><a href="#">vídeos</a></li>
+                <li><a href="#">fotos</a></li>
+                <li><a href="#">contato</a></li>
+            </ul>
+        </nav>
+
+        <p>
+            &copy; <a href="#">Museu Nacional</a> 2024 - Davi do couto junto a <a target="_blank" href="https://www.udemy.com/">Udemy</a> - Todos os direitos reservados.
+        </p>
+    </footer>
 </body>
 </html>
