Ajustando algumas coisas do site e incluindo a página css normalize.

--- a/ProjetosUdemy/projeto-museu/home.html
+++ b/ProjetosUdemy/projeto-museu/home.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Museu Nacional</title>
-    <link rel="stylesheet" href="style.css">
+
+    <!--Normalize CSS -->
+    <link rel="stylesheet" href="css/normalize.css">
+
+    <!--Estilo customizado-->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
