Projeto Museu finalizado!

--- a/ProjetosUdemy/projeto-museu/home.html
+++ b/ProjetosUdemy/projeto-museu/home.html
@@ -46,7 +46,6 @@
                     <h1>Mapa: encontre o museu</h1>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.206445750082!2d-43.229103825448576!3d-22.905755037832748!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997e58a085b7af%3A0x4d11e9a933d38ce3!2sMuseu%20Nacional%20-%20UFRJ!5e0!3m2!1spt-BR!2sbr!4v1734988877884!5m2!1spt-BR!2sbr" width="330" height="190" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </section>
-
                 
             </div>
 
@@ -61,7 +60,7 @@
                         <li><a href="#">Plantas do Brasil Central</a></li>
                         <li><a href="#">Teresa Cristina: A imperatriz Arqueóoga</a></li>
                         <li><a href="#">Artes com dinossauros - Paleoarte</a></li>
-                        <li><a href="#">Veja todos (65)</a></li>
+                        <li><a href="#"><strong>Veja todos (65)</strong></a></li>
                     </ul>
                 </section>
 
@@ -72,7 +71,7 @@
                         Numa ponta que avança sobre o mar, posteriormente conhecida como Ponta do Calabouço, entre as prais de Piaçaba e Santa Luzia, no centro histórico do Rio de Janeiro, os portugueses construiram em 1603 a Fortaleza de Santiago, origem do conjunto arquitetônico que hoje abriga o Museu Histórico Nacional.
                     </p>
 
-                    <a href="#">Leia mais</a>
+                    <a href="#"><strong>Leia mais</strong></a>
                 </section>
             </div>
 
@@ -100,7 +99,21 @@
             <section id="galeria-fotos">
                 <h1>galeria de fotos</h1>
 
-                <img class="fundo" src="img/imagem1.jpg" alt="foto 1 do museu">
+                <a href="#">
+                    <img src="img/imagem1.jpg" alt="foto 1 do museu" height="93px" width="93px">
+                </a>
+
+                <a href="#">
+                    <img src="img/imagem2.jpg" alt="foto 1 do museu" height="93px" width="93px">
+                </a>
+
+                <a href="#">
+                    <img src="img/imagem3.jpg" alt="foto 1 do museu" height="93px" width="93px">
+                </a>
+
+                <a href="#">
+                    <img src="img/imagem4.jpg" alt="foto 1 do museu" height="93px" width="93px">
+                </a>
             </section>
         </aside>
     </main>
